--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "@mui/material": "^5.9.1",
     "next": "12.2.2",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-slick": "^0.29.0",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "eslint": "8.20.0",
